// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all flights query should return array of flights 1`] = `
Object {
  "data": Object {
    "allFlights": Array [
      Object {
        "airlines": Array [
          Object {
            "code": "OK",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/OK.png",
            "name": "Czech Airlines",
          },
          Object {
            "code": "DY",
            "isLowCost": true,
            "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
            "name": "Norwegian",
          },
          Object {
            "code": "UA",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/UA.png",
            "name": "United Airlines",
          },
        ],
        "arrival": Object {
          "airport": Object {
            "city": Object {
              "name": "Mexico City",
            },
            "code": "MEX",
          },
          "localTime": "2017-09-08T12:45:00.000Z",
          "time": "2017-09-08T17:45:00.000Z",
        },
        "departure": Object {
          "airport": Object {
            "city": Object {
              "name": "Prague",
            },
            "code": "PRG",
          },
          "localTime": "2017-09-06T11:40:00.000Z",
          "time": "2017-09-06T09:40:00.000Z",
        },
      },
      Object {
        "airlines": Array [
          Object {
            "code": "OK",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/OK.png",
            "name": "Czech Airlines",
          },
          Object {
            "code": "DY",
            "isLowCost": true,
            "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
            "name": "Norwegian",
          },
          Object {
            "code": "UA",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/UA.png",
            "name": "United Airlines",
          },
        ],
        "arrival": Object {
          "airport": Object {
            "city": Object {
              "name": "Mexico City",
            },
            "code": "MEX",
          },
          "localTime": "2017-09-08T05:30:00.000Z",
          "time": "2017-09-08T10:30:00.000Z",
        },
        "departure": Object {
          "airport": Object {
            "city": Object {
              "name": "Prague",
            },
            "code": "PRG",
          },
          "localTime": "2017-09-06T11:40:00.000Z",
          "time": "2017-09-06T09:40:00.000Z",
        },
      },
      Object {
        "airlines": Array [
          Object {
            "code": "SK",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/SK.png",
            "name": "SAS",
          },
          Object {
            "code": "DY",
            "isLowCost": true,
            "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
            "name": "Norwegian",
          },
          Object {
            "code": "UA",
            "isLowCost": false,
            "logoUrl": "https://images.kiwi.com/airlines/64/UA.png",
            "name": "United Airlines",
          },
        ],
        "arrival": Object {
          "airport": Object {
            "city": Object {
              "name": "Mexico City",
            },
            "code": "MEX",
          },
          "localTime": "2017-09-08T12:45:00.000Z",
          "time": "2017-09-08T17:45:00.000Z",
        },
        "departure": Object {
          "airport": Object {
            "city": Object {
              "name": "Prague",
            },
            "code": "PRG",
          },
          "localTime": "2017-09-06T14:05:00.000Z",
          "time": "2017-09-06T12:05:00.000Z",
        },
      },
    ],
  },
}
`;

exports[`all flights query should return error if dateFrom is after dateTo 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: DateFrom should start before dateTo],
  ],
}
`;

exports[`all flights query should return error if invalid date format is passed 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$input" got invalid value {"from":"PRG","to":"MEX","dateFrom":"08/08/2017","dateTo":"2017-09-08"}.
In field "dateFrom": Expected type "Date", found "08/08/2017": Date cannot represent an invalid date-string 08/08/2017.],
  ],
}
`;
